# seymour-core

./: CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md
.claude/commands/: gen-ffi.md
src/: ffi.rs  http.rs  lib.rs  main.rs  sqlite.rs
testdata/: add_feed.txt  describe_feed.txt  list_entries.txt  list_feeds.txt  sync_all.txt  timeline.txt
