[package]
name = "seycore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi"]

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "seycore"

[features]
uniffi = ["dep:uniffi"]

[dependencies]
anyhow = "1.0.101"
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
rusqlite = "0.38.0"
rusqlite_migration = "2.4.1"
uniffi = { version = "0.31.0", features = [ "cli" ], optional = true }
uuid = { version = "1.21.0", features = ["v4"] }

[build-dependencies]
uniffi = { version = "0.31.0", features = [ "build" ] }
