[package]
name = "seycore"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/main.rs"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
required-features = ["uniffi"]

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "seycore"

[features]
uniffi = ["dep:uniffi"]

[dependencies]
anyhow = "1.0.101"
chrono = "0.4"
tokio = { version = "1", features = ["macros", "rt"] }
clap = { version = "4", features = ["derive"] }
dirs = "6.0.0"
reqwest = "0.13.2"
rusqlite = "0.38.0"
rusqlite_migration = "2.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
uniffi = { version = "0.31.0", features = [ "cli" ], optional = true }
uuid = { version = "1.21.0", features = ["v4"] }

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["macros", "rt"] }

[build-dependencies]
uniffi = { version = "0.31.0", features = [ "build" ] }
